tests/tmytests/bad/field_collision_4.lat
class Ok {
    int a;
    int b;
}

class BadKiddo extends Ok {
    string b;
}

int main() {
    return 0;
}